Quelltext hinzugefügt. Dokumentation überarbeitet run-Skripte für Windows, Linux und Docker

--- a/.env.example
+++ b/.env.example
@@ -1,21 +1,24 @@
-# flatex
 FLATEX_USER=
 FLATEX_PASS=
-FLATEX_DEPOT_LABEL="***123 Depot - Meier"
 
-# MySQL
+# Beispielsweise ""***123 Depot - Meier" - so wie es in der Weboberfläche steht
+FLATEX_DEPOT_LABEL=
+
+HEADLESS=true
+OUTPUT_JSON_PATH=/out/latest.json
+DEBUG_TABLE=false
+
 MYSQL_ENABLED=false
 MYSQL_HOST=
-MYSQL_PORT=
+MYSQL_PORT=3306
 MYSQL_USER=
 MYSQL_PASS=
 MYSQL_DB=
+MYSQL_CONNECT_TIMEOUT=10
 
-# Influx
 INFLUX_ENABLED=false
-INFLUX_URL=
+INFLUX_URL=http://influxdb:8086
 INFLUX_TOKEN=
 INFLUX_ORG=
 INFLUX_BUCKET=
-
-DEBUG_TABLE=false
+INFLUX_TIMEOUT_MS=10000
